# adventofcode-2022

./: .gitignore  aoc-2022.ipynb  pyproject.toml
